Updated to use ListSignal and bindChildren to control steps